@@ -42,7 +42,7 @@ dependencies {
 application {
     applicationName = 'cottontaildb'
     mainClassName = 'org.vitrivr.cottontail.CottontailKt'
-    applicationDefaultJvmArgs = ["-Xms2G", "-Xmx4G"]
+    applicationDefaultJvmArgs = ['--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED', "-Xms2G", "-Xmx4G"]
 }
 
 /* Publication of Cottontail DB to Maven Central. */
